# LogAnalyzer

./: .env  .gitignore  README.md  cli.py  main.py  pipeline.py  pyproject.toml  requirements.txt
analysis/: bottlenecks.py  dfkeys.py  dfutils.py  requests.py  stats.py
analysis/bottlenecks/: __init__.py  log_context.py  table.py
analysis/requests/: __init__.py  columns.py  gpe_rollup.py  restpp_rollup.py  tables.py  util.py
analysis/step_stats/: __init__.py  aggregate.py  compare.py  schema.py
common/: config.py  env.py  regexes.py  reporting.py  types.py  utils.py
common/model/: config.py  constants.py  results.py  types.py
common/parse/: glog.py  regexes.py  request_id.py  time.py
common/support/: env.py  reporting.py  stats.py
export/: artifacts.py  open_file.py  paths.py  plot.py  writers.py
parsers/: _walker.py  dfutils.py  gpe.py  restpp.py
parsers/gpe/: __init__.py  dataframe.py  decode.py  records.py  rows.py  table.py
parsers/restpp/: __init__.py  dataframe.py  decode.py  records.py  rows.py  table.py
scripts/: bootstrap.sh
src/: domain.py  interfaces.py  types.py  utils.py
src/analysis/: comparator.py  fingerprinting.py  metrics.py  repair.py  stats.py
src/parsing/: crawler.py  gpe.py  restpp.py  strategies.py
src/visualization/: console.py  plotter.py
transforms/: attach.py  gaps.py
